--- a/views/restricted/Front-post.ejs
+++ b/views/restricted/Front-post.ejs
@@ -1,58 +1,62 @@
 <% include ../partials/head %>
 
 <div class="container container-single">
-	<div class="single-wrapper col-8 offset-2">
-		<h1 class="single-title">Modifier les images de l'accueil</h1>
-		<h5 class="text-center" style="color: var(--light-shade-p1);">*Pensez à utiliser des images au format paysage...</h5>
-		<% if (locals.front) { %> <% for (let index = 0; index < 5; index++) { %> <% if (locals.front[index] && locals.front[index].null != true) { %>
-		<form class="col-10 offset-1 text-center front-form" name="upload<%= index %>" action="/api/front/post" method="POST" enctype="multipart/form-data" onsubmit="postFront(event, this);">
-			<div class="form-group" id="uploadGroup<%= index %>">
-				<label for="upload<%= index %>" class="filebtn">Choisir une image</label>
-				<input type="file" name="img" id="upload<%= index %>" class="inputfile" onchange="readURL(this);" />
+	<div class="single-wrapper">
+		<div class="col-10 offset-1 wrapper">
+			<h1 class="single-title text-center">Modifier les images de l'accueil</h1>
+			<div id="alert" class="alert alert-info alert-static mb-3" role="alert">
+				Pensez à utiliser des images au format paysage...
 			</div>
-			<img class="w-100" id="image<%= index %>" src="/api/front/image/<%= locals.front[index]._id %>" alt="uploadedImg" data-uploaded="true" />
-			<div class="form-group text-center">
-				<button id="delete<%= index %>" onclick="deleteImage(this, event);" class="delbtn">SUPPRIMER</button>
-			</div>
-			<input type="hidden" name="referenceId" value="<%= index %>" />
-			<div id="uploadbtn<%= index %>" class="form-group" style="display: none;">
-				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-				<button type="submit" name="submit" class="logbtn">Valider</button>
-			</div>
-		</form>
-		<% } else { %>
-		<form class="col-10 offset-1 text-center front-form" name="upload<%= index %>" action="/api/front/post" method="POST" enctype="multipart/form-data" onsubmit="postFront(event, this);">
-			<div class="form-group" id="uploadGroup<%= index %>">
-				<label for="upload<%= index %>" class="filebtn">Choisir une image</label>
-				<input type="file" name="img" id="upload<%= index %>" class="inputfile" onchange="readURL(this);" />
-			</div>
-			<img class="w-100" id="image<%= index %>" src="" style="display: none;" alt="uploadedImg" data-uploaded="false" />
-			<div class="form-group text-center">
-				<button id="delete<%= index %>" onclick="deleteImage(this, event);" class="delbtn" style="display: none;">SUPPRIMER</button>
-			</div>
-			<input type="hidden" name="referenceId" value="<%= index %>" />
-			<div id="uploadbtn<%= index %>" class="form-group" style="display: none;">
-				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-				<button type="submit" name="submit" class="logbtn">Valider</button>
-			</div>
-		</form>
-		<% } %> <% } %> <% } else { %>
-		<form class="col-10 offset-1 text-center front-form" name="upload0" action="/api/front/post" method="POST" enctype="multipart/form-data" onsubmit="postFront(event, this);">
-			<div class="form-group" id="uploadGroup0">
-				<label for="upload0" class="filebtn">Choisir une image</label>
-				<input type="file" name="img" id="upload0" class="inputfile" onchange="readURL(this);" />
-			</div>
-			<img class="w-100" id="image0" src="" style="display: none;" alt="uploadedImg" data-uploaded="false" />
-			<div class="form-group text-center">
-				<button id="delete0" onclick="deleteImage(this, event);" class="delbtn" style="display: none;">Delete</button>
-			</div>
-			<input type="hidden" name="referenceId" value="0" />
-			<div id="uploadbtn0" class="form-group" style="display: none;">
-				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-				<button type="submit" name="submit" class="logbtn">Valider</button>
-			</div>
-		</form>
-		<% } %>
+			<% if (locals.front) { %> <% for (let index = 0; index < 5; index++) { %> <% if (locals.front[index] && locals.front[index].null != true) { %>
+			<form class="text-center front-form" name="upload<%= index %>" action="/api/front/post" method="POST" enctype="multipart/form-data" onsubmit="postFront(event, this);">
+				<div class="form-group" id="uploadGroup<%= index %>">
+					<label for="upload<%= index %>" class="filebtn">Choisir une image</label>
+					<input type="file" name="img" id="upload<%= index %>" class="inputfile" onchange="readURL(this);" />
+				</div>
+				<img class="w-100" id="image<%= index %>" src="/api/front/image/<%= locals.front[index]._id %>" alt="uploadedImg" data-uploaded="true" />
+				<div class="form-group text-center">
+					<button id="delete<%= index %>" onclick="deleteImage(this, event);" class="delbtn">SUPPRIMER</button>
+				</div>
+				<input type="hidden" name="referenceId" value="<%= index %>" />
+				<div id="uploadbtn<%= index %>" class="form-group" style="display: none;">
+					<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+					<button type="submit" name="submit" class="logbtn">Valider</button>
+				</div>
+			</form>
+			<% } else { %>
+			<form class="text-center front-form" name="upload<%= index %>" action="/api/front/post" method="POST" enctype="multipart/form-data" onsubmit="postFront(event, this);">
+				<div class="form-group" id="uploadGroup<%= index %>">
+					<label for="upload<%= index %>" class="filebtn">Choisir une image</label>
+					<input type="file" name="img" id="upload<%= index %>" class="inputfile" onchange="readURL(this);" />
+				</div>
+				<img class="w-100" id="image<%= index %>" src="" style="display: none;" alt="uploadedImg" data-uploaded="false" />
+				<div class="form-group text-center">
+					<button id="delete<%= index %>" onclick="deleteImage(this, event);" class="delbtn" style="display: none;">SUPPRIMER</button>
+				</div>
+				<input type="hidden" name="referenceId" value="<%= index %>" />
+				<div id="uploadbtn<%= index %>" class="form-group" style="display: none;">
+					<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+					<button type="submit" name="submit" class="logbtn">Valider</button>
+				</div>
+			</form>
+			<% } %> <% } %> <% } else { %>
+			<form class="text-center front-form" name="upload0" action="/api/front/post" method="POST" enctype="multipart/form-data" onsubmit="postFront(event, this);">
+				<div class="form-group" id="uploadGroup0">
+					<label for="upload0" class="filebtn">Choisir une image</label>
+					<input type="file" name="img" id="upload0" class="inputfile" onchange="readURL(this);" />
+				</div>
+				<img class="w-100" id="image0" src="" style="display: none;" alt="uploadedImg" data-uploaded="false" />
+				<div class="form-group text-center">
+					<button id="delete0" onclick="deleteImage(this, event);" class="delbtn" style="display: none;">Delete</button>
+				</div>
+				<input type="hidden" name="referenceId" value="0" />
+				<div id="uploadbtn0" class="form-group" style="display: none;">
+					<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+					<button type="submit" name="submit" class="logbtn">Valider</button>
+				</div>
+			</form>
+			<% } %>
+		</div>
 	</div>
 </div>
 
