--- a/views/restricted/Blog-patch.ejs
+++ b/views/restricted/Blog-patch.ejs
@@ -1,29 +1,31 @@
 <% include ../partials/head %>
 
 <div class="container container-single">
-	<div class="single-wrapper col-8 offset-2">
-		<h1 class="single-title">Modifier un ticket de blog</h1>
-		<form class="col-8 offset-2" id="blog" method="POST" action="/api/blog/patch/<%= locals.blog.id %>">
-			<hr />
-			<div class="form-group">
-				<label class="control-label">Titre</label>
-				<input class="form-control" type="text" name="title" id="title" placeholder="Titre" value="<%= locals.blog.title %>" onkeyup="Validate.String(this, 1, 256);" required />
-				<span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
-			</div>
+	<div class="single-wrapper">
+		<div class="col-10 offset-1 wrapper">
+			<h1 class="single-title text-center">Modifier un ticket de blog</h1>
+			<form id="blog" method="POST" action="/api/blog/patch/<%= locals.blog.id %>">
+				<hr />
+				<div class="form-group">
+					<label class="control-label">Titre</label>
+					<input type="text" name="title" id="title" placeholder="Titre" value="<%= locals.blog.title %>" onkeyup="Validate.String(this, 1, 256);" required />
+					<span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
+				</div>
 
-			<div class="form-group">
-				<div id="editor" style="background-color: white;" onkeyup="saveContent()"></div>
-				<input type="hidden" name="content" id="content" />
-				<span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>
-			</div>
+				<div class="form-group">
+					<div id="editor" onkeyup="saveContent()"></div>
+					<input type="hidden" name="content" id="content" />
+					<span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>
+				</div>
 
-			<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-			<input type="submit" class="logbtn" value="Mettre à jour" id="submit-blog" />
-		</form>
-		<form class="col-8 offset-2 mt-4" method="POST" action="/api/blog/delete/<%= locals.blog.id %>">
-			<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-			<input type="submit" class="delbtn" value="SUPPRIMER DEFINITIVEMENT" id="delete-blog" />
-		</form>
+				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+				<input type="submit" class="logbtn" value="Mettre à jour" id="submit-blog" />
+			</form>
+			<form class="mt-3" method="POST" action="/api/blog/delete/<%= locals.blog.id %>">
+				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+				<input type="submit" class="delbtn" value="SUPPRIMER DEFINITIVEMENT" id="delete-blog" />
+			</form>
+		</div>
 	</div>
 </div>
 
