--- a/views/restricted/Gallery-patch.ejs
+++ b/views/restricted/Gallery-patch.ejs
@@ -2,19 +2,20 @@
 
 <script src="/scripts/bootstrap-tagsinput.js"></script>
 <div class="container container-single"> 
-    <div class="single-wrapper col-8 offset-2">
-        <h1 class="single-title">Modifier un item de la galerie</h1>
-        <form class="col-8 offset-2" id="gallery" method="POST" action="/api/gallery/patch/<%= locals.gallery._id %>" enctype="multipart/form-data" onsubmit="patchGallery(event, '<%= locals.gallery._id %>');"> 
+    <div class="single-wrapper">
+        		<div class="col-10 offset-1 wrapper">
+        <h1 class="single-title text-center">Modifier un item de la galerie</h1>
+        <form  id="gallery" method="POST" action="/api/gallery/patch/<%= locals.gallery._id %>" enctype="multipart/form-data" onsubmit="patchGallery(event, '<%= locals.gallery._id %>');"> 
             <hr />
             <div class="form-group">
                 <label class="control-label">Titre</label>
-                <input class="form-control" type="text" name="title" id="title" placeholder="Titre" value="<%= locals.gallery.title %>" onkeyup="Validate.String(this, 1, 256);" required>
+                <input type="text" name="title" id="title" placeholder="Titre" value="<%= locals.gallery.title %>" onkeyup="Validate.String(this, 1, 256);" required>
                 <span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
             </div>
 
             <div class="form-group">
                 <label class="control-label">Description</label>
-                <textarea class="instructions-textarea" id="content" name="content" placeholder="Description de l'oeuvre.." onkeyup="Validate.String(this, 1, 2048);" required><%= locals.gallery.content %></textarea>
+                <textarea class="instructions-textarea" rows="5" id="content" name="content" placeholder="Description de l'oeuvre.." onkeyup="Validate.String(this, 1, 2048);" required><%= locals.gallery.content %></textarea>
                 <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>  
             </div>
 
@@ -36,17 +37,18 @@
             
             <div class="form-group">
                 <label class="control-label">Tags</label>
-                <input v-bind="selectedTags" type="text" value="" data-role="tagsinput" id="tagInput" class="form-control">
+                <input v-bind="selectedTags" type="text" value="" data-role="tagsinput" id="tagInput" >
                 <span data-placeholder="Tags"></span>
             </div>
 
             <input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
             <input type="submit" class="logbtn" value="Mettre à jour" id="submit-gallery">
         </form>
-        <form class="col-8 offset-2 mt-4" method="POST" action="/api/gallery/delete/<%= locals.gallery._id %>">
+        <form class="mt-3" method="POST" action="/api/gallery/delete/<%= locals.gallery._id %>">
            	<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
             <input type="submit" class="delbtn" value="SUPPRIMER DEFINITIVEMENT" id="delete-blog">
         </form>
+</div>
 </div>
 
 <script>
