--- a/views/restricted/Shop-post.ejs
+++ b/views/restricted/Shop-post.ejs
@@ -1,35 +1,37 @@
 <% include ../partials/head %>
 
 <div class="container container-single">
-	<div class="single-wrapper col-8 offset-2">
-		<h1 class="single-title">Ajouter un item à la boutique</h1>
-		<form class="col-8 offset-2" id="shop" method="POST" action="/api/shop/post" enctype="multipart/form-data" onsubmit="postShop(event);">
-			<hr />
-			<div class="form-group">
-				<label class="control-label">Titre</label>
-				<input class="form-control" type="text" name="title" id="title" placeholder="Titre" onkeyup="Validate.String(this, 1, 256);" required />
-				<span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
-			</div>
+	<div class="single-wrapper">
+		<div class="col-10 offset-1 wrapper">
+			<h1 class="single-title text-center">Ajouter un item à la boutique</h1>
+			<form id="shop" method="POST" action="/api/shop/post" enctype="multipart/form-data" onsubmit="postShop(event);">
+				<hr />
+				<div class="form-group">
+					<label class="control-label">Titre</label>
+					<input type="text" name="title" id="title" placeholder="Titre" onkeyup="Validate.String(this, 1, 256);" required />
+					<span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
+				</div>
 
-			<div class="form-group">
-				<label class="control-label">Description</label>
-				<textarea class="instructions-textarea" id="content" name="content" placeholder="Description de l'item..." onkeyup="Validate.String(this, 1, 2048);" required></textarea>
-				<span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>
-			</div>
+				<div class="form-group">
+					<label class="control-label">Description</label>
+					<textarea class="instructions-textarea" rows="5" id="content" name="content" placeholder="Description de l'item..." onkeyup="Validate.String(this, 1, 2048);" required></textarea>
+					<span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>
+				</div>
 
-			<div class="form-group">
-				<label class="control-label">Prix</label>
-				<input placeholder="35.50 (au centième d'euro près)" class="form-control" type="number" min="1" id="price" name="price" step=".01" required />
-			</div>
+				<div class="form-group">
+					<label class="control-label">Prix</label>
+					<input placeholder="35.50 (au centième d'euro près)" type="number" min="1" id="price" name="price" step=".01" required />
+				</div>
 
-			<div class="form-group text-center">
-				<label for="img" id="imglabel" class="filebtn">Choisir des images</label>
-				<input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple required />
-			</div>
+				<div class="form-group text-center">
+					<label for="img" id="imglabel" class="filebtn">Choisir des images</label>
+					<input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple required />
+				</div>
 
-			<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-			<input type="submit" class="logbtn" value="Valider" id="submit-shop" />
-		</form>
+				<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
+				<input type="submit" class="logbtn" value="Valider" id="submit-shop" />
+			</form>
+		</div>
 	</div>
 </div>
 
