--- a/views/Catalog.ejs
+++ b/views/Catalog.ejs
@@ -2,6 +2,11 @@
 
 <script src="/scripts/cart.js"></script>
 <div class="container">
+	<div id="alert" class="alert alert-warning alert-static w-100 mb-3" style="text-align: left;" role="alert">
+		This is the catalog available and it's options to tailour our reproductions to your needs. <br />
+		Simply go to the <a target="_blank" href="/Galerie"><b>Gallery</b></a
+		>, click the <b>"See More" button</b> for the painting you're interested in, and down below you can chose what options you'd like
+	</div>
 	<div class="container-single container-catalog col-12">
 		<div class="catalog-wrapper col-10 offset-1">
 			<div class="text-center mb-4 pt-4">
