--- a/views/User.ejs
+++ b/views/User.ejs
@@ -63,6 +63,8 @@
 					<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 					<input type="submit" class="logbtn mt-2" value="Save" id="submit-passwordform" />
 				</form>
+
+				<button class="logbtn delacc" onclick="deleteAccount()">DELETE ACCOUNT</button>
 				</div>
 				</div>
 		</div>
