--- a/views/single/Blog-single.ejs
+++ b/views/single/Blog-single.ejs
@@ -11,7 +11,7 @@
 						<a href="/Admin/Blog/Patch/<%= locals.blog._id %>"><i class="fas fa-edit"></i></a>
 						<% } %>
 					</h3>
-					<p class="blog-info pb-2">par <b class="blog-author"><%= locals.blog.author %></b>, <i class="blog-date"><%= locals.blog.date %></i></p>
+					<p class="blog-info pb-2">by <b class="blog-author"><%= locals.blog.author %></b>, <i class="blog-date"><%= locals.blog.date %></i></p>
 					<hr class="hr-pwinty mt-3" />
 				</div>
 
