--- a/views/single/Shop-single.ejs
+++ b/views/single/Shop-single.ejs
@@ -50,7 +50,7 @@
 
 			<div class="col-4 offset-4 text-center mt-2">
 				<b class="card-price"><%= locals.shop.price %>€</b>
-				<b class="isUnique">Toile unique</b>
+				<b class="isUnique">Unique Painting</b>
 				<input type="submit" class="logbtn" value="Add to cart" onclick="cartAdd('<%= locals.shop._id %>', this)" /><!--disabled -->
 			</div>
 			<% } %>
