--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -5,12 +5,12 @@
 		<div class="menu col-3">
 			<ul>
 				<li>
-					<a href="#" onclick="openTab(event, this, 'login')" class="menu-link active disabled"><i class="fas fa-sign-in-alt mr-2"></i> Connexion <i class="fas fa-chevron-right chev"></i></a>
+					<a href="#" onclick="openTab(event, this, 'login')" class="menu-link active disabled"><i class="fas fa-sign-in-alt mr-2"></i> Sign up/Log in <i class="fas fa-chevron-right chev"></i></a>
 				</li>
 				<li>
 					<a href="#" onclick="openTab(event, this, 'lostpw-container')" class="menu-link"
 						><i class="fas fa-key mr-2"></i>
-						<span style="font-size: 20px;">Mot de passe oublié</span>
+						<span style="font-size: 20px;">Lost password</span>
 						<i class="fas fa-chevron-right chev"></i
 					></a>
 				</li>
@@ -21,7 +21,7 @@
 			<div class="container" id="container">
 				<div class="form-slider-container sign-up-container">
 					<form class="form-slider" id="register" onsubmit="submitRegister(event)" method="POST" action="/api/auth/register">
-						<h1>S'inscrire</h1>
+						<h1>Sign up</h1>
 
 						<input placeholder="Jean75" type="text" name="name" id="name" onkeyup="Validate.String(this, 4, 30);" value="<% if (locals.formData) { %><%= locals.formData.name %><% } %>" required />
 						<span id="i_name" class="form-info">Username must contain between 4 and 30 characters</span>
@@ -37,41 +37,41 @@
 						/>
 						<span id="i_email" class="form-info">E-mail has to be valid</span>
 
-						<input placeholder="Mot de passe" type="password" name="password" id="password" onkeyup="Validate.Password(this);" required />
+						<input placeholder="Password" type="password" name="password" id="password" onkeyup="Validate.Password(this);" required />
 						<span id="i_password" class="form-info">Password must contain between 8 and 256 characters and has to beatleast alphanumeric</span>
 
-						<input placeholder="Mot de passe (confirmation)" type="password" name="password2" id="password2" onkeyup="Validate.Password2(this);" required />
+						<input placeholder="Password (confirm)" type="password" name="password2" id="password2" onkeyup="Validate.Password2(this);" required />
 						<span id="i_password2" class="form-info">Password has to be the same as the one you just entered</span>
 
 						<div class="recaptcha-wrapper"></div>
 						<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
-						<input type="submit" class="logbtn" value="Inscription" id="submit-register" />
+						<input type="submit" class="logbtn" value="Sign up" id="submit-register" />
 					</form>
 				</div>
 
 				<div class="form-slider-container sign-in-container">
 					<form class="form-slider" id="login-form" method="POST" onsubmit="submitLogin(event)" action="/api/auth/login">
-						<h1 class="mb-3">Se connecter</h1>
+						<h1 class="mb-3">Log in</h1>
 						<input placeholder="Email" type="email" id="login-email" name="email" value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>" required />
-						<input placeholder="Mot de passe" type="password" id="login-pw" name="password" required />
+						<input placeholder="Password" type="password" id="login-pw" name="password" required />
 
 						<input type="hidden" name="_csrf" value="<%= locals.csrfToken %>" />
 						<div class="recaptcha-wrapper"></div>
-						<input type="submit" class="logbtn" value="Connexion" id="submit-login" />
+						<input type="submit" class="logbtn" value="Log in" id="submit-login" />
 					</form>
 				</div>
 
 				<div class="overlay-container">
 					<div class="overlay">
 						<div class="overlay-panel overlay-left">
-							<h1>Bienvenue!</h1>
-							<p>Pour accéder à votre compte, connectez vous en cliquant sur ce bouton</p>
-							<button class="ghost" id="signIn">Connexion</button>
+							<h1>Welcome!</h1>
+							<p>To access your account, please log in using this button</p>
+							<button class="ghost" id="signIn">Log in</button>
 						</div>
 						<div class="overlay-panel overlay-right">
-							<h1>Pas encore de compte?</h1>
-							<p>Créez un compte en moins d'une minute</p>
-							<button class="ghost" id="signUp">Inscription</button>
+							<h1>No account yet?</h1>
+							<p>Create an account in less than a minute</p>
+							<button class="ghost" id="signUp">Sign up</button>
 						</div>
 					</div>
 				</div>
