--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -4,7 +4,10 @@
 <script src="/scripts/cart.js"></script>
     <div class="container container-single">
         <div id="container-shop">
-            <h1 class="single-title text-center mt-2 p-2" style="color: var(--light-shade)">Toile Originale</h1>
+            <h1 class="single-title text-center mt-2 p-2" style="color: var(--light-shade)">Original Painting</h1>
+            <div id="alert" class="alert alert-info alert-static w-100 mb-3" role="alert">
+								We also sell great quality reproductions in all sizes and shapes, for more information check the <a href="/Catalog">Catalog</a>
+								</div>
             <div id="original" class="tab container-shop">
               <% if (locals.original){ %>
                 <% Object.keys(locals.original).forEach(function (index) { %>
@@ -16,18 +19,18 @@
                       <div class="row shop-price-row mt-4">
                         <div class="shop-price-col col-6">
                           <b class="card-price"><%= locals.original[index].price %>€</b>
-                            <b class="isUnique">Toile unique</b>
+                            <b class="isUnique">Unique Painting</b>
                         </div>
                      
                         <div class="col-6">
-                          <input type="submit" class="logbtn" value="Ajouter au panier" onclick="cartAdd('<%= locals.original[index]._id %>', this)">
+                          <input type="submit" class="logbtn" value="Add to cart" onclick="cartAdd('<%= locals.original[index]._id %>', this)">
                         </div>
                       </div>
                     </div>
                   </div>
                 <% }) %>
               <% } else { %>
-                <h1 class="alertEmpty">Plus de toiles originales en stock!</h1>
+                <h1 class="alertEmpty">No more original paintings left, check the catalog to buy reproductions!</h1>
               <% } %>
           </div>
            <div class="col-6 offset-3 mt-5">
